fixed vertical align on .block-faq items counter

--- a/#src/scss/style.sass
+++ b/#src/scss/style.sass
@@ -4432,7 +4432,7 @@
 			content: ''
 			position: absolute
 			height: fit-content
-			top: calc(0% + 10px)
+			top: calc(0% + 1px)
 			bottom: 0
 			margin: auto 0
 			left: 18px
